# minima-core-cpp

./: .gitignore  AGENT_RULES.md  AGENT_STATE.json  CMakeLists.txt  IMPLEMENTATION_STATUS.md  LICENSE  README.md
.agents/skills/: autonomous_work.js
.github/workflows/: ci.yml  cpp-ci.yml  pr-checks.yml
create-minidapp/: package-lock.json  package.json  tsconfig.json
create-minidapp/src/: cli.ts  scaffold.ts  templates.ts  types.ts
create-minidapp/tests/: run.js
docs/: ARCHITECTURE.md  PARITY_GAP_ANALYSIS.md
kiss-vm-lint/: README.md  package-lock.json  package.json  tsconfig.json
kiss-vm-lint/src/: cli.ts  index.ts  rules.ts  tokenizer.ts
kiss-vm-lint/tests/: run.js
minima-contracts/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
minima-contracts/src/: index.ts  library.ts  types.ts
minima-contracts/src/contracts/: BasicSigned.ts  Exchange.ts  HTLC.ts  TimeLock.ts  Vault.ts  basic-signed.ts  exchange.ts  htlc.ts  multisig.ts  state-channel.ts  time-lock.ts  vault.ts
minima-contracts/tests/: run.js
minima-core-cpp/: AGENT_RULES.md  CMakeLists.txt  IMPLEMENTATION_STATUS.md
minima-core-cpp/.github/workflows/: ci.yml
minima-core-cpp/src/chain/: BlockStore.hpp  ChainProcessor.hpp  ChainState.hpp  DifficultyAdjust.hpp  UTxOSet.hpp
minima-core-cpp/src/crypto/: Hash.cpp  RSA.cpp  TreeKey.hpp  WOTS.hpp
minima-core-cpp/src/crypto/impl/: sha256.h  sha3.h
minima-core-cpp/src/kissvm/: Contract.hpp
minima-core-cpp/src/kissvm/functions/: Functions.cpp
minima-core-cpp/src/mining/: TxPoWMiner.hpp
minima-core-cpp/src/mmr/: MMRData.cpp  MMRData.hpp  MMRSet.hpp
minima-core-cpp/src/network/: NIOMessage.hpp  NIOServer.hpp  NetworkProtocol.hpp
minima-core-cpp/src/node/: Node.hpp  main.cpp
minima-core-cpp/src/objects/: Address.cpp  Coin.cpp  Coin.hpp  CoinProof.hpp  Greeting.hpp  Magic.cpp  Magic.hpp  StateVariable.cpp  Token.hpp  TxBody.cpp  TxBody.hpp  TxHeader.cpp  TxHeader.hpp  TxPoW.cpp  TxPoW.hpp  Witness.cpp
minima-core-cpp/src/serialization/: DataStream.hpp
minima-core-cpp/src/types/: MiniData.hpp  MiniNumber.cpp  MiniNumber.hpp
minima-core-cpp/src/validation/: TxPoWValidator.cpp
minima-core-cpp/tests/: CMakeLists.txt
minima-core-cpp/tests/chain/: test_chain.cpp  test_difficulty.cpp
minima-core-cpp/tests/crypto/: test_checksig_direct.cpp  test_checksig_integration.cpp  test_checksig_treekey.cpp  test_rsa.cpp  test_wots_treekey.cpp
minima-core-cpp/tests/kissvm/: test_kissvm.cpp
minima-core-cpp/tests/mempool/: test_mempool.cpp
minima-core-cpp/tests/mmr/: test_mmr.cpp
minima-core-cpp/tests/network/: test_network.cpp
minima-core-cpp/tests/validation/: test_validation.cpp
minima-test/: ROADMAP.md
minima-test/src/interpreter/: functions.ts  index.ts
minima-test/src/tokenizer/: index.ts
minima-test/tests/: 06-audit-fixes.test.js
monorepo/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  tsconfig.base.json
scripts/: run_live_test.sh
src/: minima_core.hpp
src/chain/: ChainProcessor.hpp  DifficultyAdjust.hpp
src/crypto/: Hash.hpp  RSA.hpp  Schnorr.cpp  Schnorr.hpp  TreeKey.hpp  Winternitz.hpp
src/crypto/impl/: sha3.h
src/database/: MinimaDB.hpp
src/kissvm/: Contract.cpp  Contract.hpp  Environment.cpp  Environment.hpp  Interpreter.cpp  Interpreter.hpp  Parser.cpp  Parser.hpp  Token.cpp  Token.hpp  Tokenizer.cpp  Tokenizer.hpp  Value.cpp  Value.hpp
src/kissvm/functions/: Functions.cpp  Functions.hpp
src/mempool/: Mempool.hpp
src/mining/: MiningManager.hpp
src/mmr/: MMREntry.cpp  MMREntry.hpp  MMRProof.cpp  MMRProof.hpp  MMRSet.cpp  MegaMMR.hpp
src/network/: NIOClient.hpp  NIOMessage.hpp  P2PSync.hpp
src/objects/: Address.hpp  Coin.cpp  Coin.hpp  CoinProof.hpp  Genesis.hpp  IBD.hpp  Magic.cpp  Magic.hpp  StateVariable.hpp  Token.hpp  Transaction.cpp  Transaction.hpp  TxBlock.hpp  TxBody.hpp  TxHeader.cpp  TxHeader.hpp  TxPoW.cpp  TxPoW.hpp  Witness.cpp  Witness.hpp
src/serialization/: DataStream.cpp  DataStream.hpp
src/types/: MiniData.cpp  MiniData.hpp  MiniNumber.cpp  MiniNumber.hpp  MiniString.cpp  MiniString.hpp
src/validation/: TxPoWValidator.cpp  TxPoWValidator.hpp
tests/: CMakeLists.txt
tests/crypto/: test_treekey.cpp  test_wots.cpp
tests/database/: test_database.cpp
tests/kissvm/: test_kissvm.cpp
tests/mining/: test_mining.cpp
tests/mmr/: test_megammr.cpp
tests/network/: test_live_node.cpp  test_network.cpp  test_p2p_sync.cpp
tests/objects/: test_genesis.cpp  test_ibd.cpp  test_txpow.cpp  test_witness_wire.cpp
tests/system/: test_processor.cpp
tests/types/: test_mini_data.cpp  test_mini_number.cpp
tests/validation/: test_validation.cpp
